# dictionary

./: .gitignore  CMakeLists.txt
modules/: compiler-config.cmake  folders.cmake  info.cmake
shell/linux/: build  build.sh  clean.sh  config  config.sh  remove  remove.sh  run  run.sh
shell/win/: build.bat  clean.bat  config.bat  remove.bat  run.bat
src/: main.cpp
src/include/: charset_traits.hpp  dictionary_traits.hpp  loader.hpp
